--- a/app/views/profiles/notifications/show.html.haml
+++ b/app/views/profiles/notifications/show.html.haml
@@ -3,8 +3,7 @@
 
 %div
   - if @user.errors.any?
-    = render 'shared/global_alert',
-      variant: :danger do
+    = render Pajamas::AlertComponent.new(variant: :danger) do
       .gl-alert-body
         %ul
           - @user.errors.full_messages.each do |msg|
