--- a/app/assets/stylesheets/startup/startup-dark.scss
+++ b/app/assets/stylesheets/startup/startup-dark.scss
@@ -543,9 +543,7 @@ a.gl-badge.badge-warning:active {
   padding-right: 2rem;
   padding-left: 1.75rem;
 }
-body,
-.form-control,
-.search form {
+body {
   font-size: 0.875rem;
 }
 button,
@@ -562,6 +560,13 @@ strong {
 }
 a {
   color: #63a6e9;
+}
+svg {
+  vertical-align: baseline;
+}
+.form-control,
+.search form {
+  font-size: 0.875rem;
 }
 .hidden {
   display: none !important;
@@ -586,9 +591,6 @@ a {
 .toggle-sidebar-button .collapse-text,
 .toggle-sidebar-button .icon-chevron-double-lg-left {
   color: #999;
-}
-svg {
-  vertical-align: baseline;
 }
 html {
   overflow-y: scroll;
