--- a/ee/app/views/emails/namespace_storage_usage_mailer/notify_limit_warning.text.erb
+++ b/ee/app/views/emails/namespace_storage_usage_mailer/notify_limit_warning.text.erb
@@ -1,4 +1,4 @@
-<%= s_('NamespaceStorage|%{name}(%{url}) namespace has %{percent} or less namespace storage space remaining.') % { name: @namespace.name, url: @usage_quotas_url, percent: "#{@percentage_of_available_storage}%" }%>
+<%= s_('NamespaceStorage|%{name}(%{url}) namespace has approximately %{percent} namespace storage space remaining.') % { name: @namespace.name, url: @usage_quotas_url, percent: "#{@percentage_of_available_storage}%" }%>
 
 <%= s_('NamespaceStorage|We recommend that you buy additional storage to ensure your service is not interrupted.') %>
 
