Revert "Merge branch '350646-use-statistics-block' into 'master'"
This reverts merge request !79525

--- a/app/views/projects/usage_quotas/index.html.haml
+++ b/app/views/projects/usage_quotas/index.html.haml
@@ -7,7 +7,7 @@
   .col-sm-12
     = s_('UsageQuota|Usage of project resources across the %{strong_start}%{project_name}%{strong_end} project').html_safe % { strong_start: '<strong>'.html_safe, strong_end: '</strong>'.html_safe, project_name: @project.name } + '.'
     %a{ href: help_page_path('user/usage_quotas.md'), target: '_blank', rel: 'noopener noreferrer' }
-      = s_('UsageQuota|Learn more about usage quotas.')
+      = s_('UsageQuota|Learn more about usage quotas') + '.'
 
 = gl_tabs_nav do
   = gl_tab_link_to '#storage-quota-tab', item_active: true do
