Fix minute limit logic
Also add banner to correct pages

Add banner to jobs and settings

--- a/app/views/projects/project_members/index.html.haml
+++ b/app/views/projects/project_members/index.html.haml
@@ -1,3 +1,5 @@
+= render_if_exists 'shared/minute_limit_banner', project: @project
+
 - add_page_specific_style 'page_bundles/members'
 - page_title _("Members")
 
