This MR replaces generic checkbox
This MR replaces generic checkbox with GitLab UI styled checkbox

Changelog: changed
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/84848
EE: true

--- a/ee/app/views/admin/push_rules/_push_rules.html.haml
+++ b/ee/app/views/admin/push_rules/_push_rules.html.haml
@@ -1,4 +1,4 @@
-= form_for @push_rule, url: admin_push_rule_path(anchor: 'js-push-rule-settings'), method: :put, html: { class: 'fieldset-form' } do |f|
+= gitlab_ui_form_for @push_rule, url: admin_push_rule_path(anchor: 'js-push-rule-settings'), method: :put, html: { class: 'fieldset-form' } do |f|
   - if @push_rule.errors.any?
     .gl-alert.gl-alert-danger
       - @push_rule.errors.full_messages.each do |msg|
