--- a/ee/app/views/shared/push_rules/_reject_unsigned_commits_setting.html.haml
+++ b/ee/app/views/shared/push_rules/_reject_unsigned_commits_setting.html.haml
@@ -5,9 +5,7 @@
 - form = local_assigns.fetch(:form)
 - push_rule = local_assigns.fetch(:push_rule)
 
-.form-check
-  = form.check_box :reject_unsigned_commits, class: "form-check-input", disabled: !can_change_push_rule?(form.object, :reject_unsigned_commits, context), data: { qa_selector: 'reject_unsigned_commits_checkbox' }
-  = form.label :reject_unsigned_commits, class: "label-bold form-check-label" do
-    Reject unsigned commits
-  %p.text-muted
-    = reject_unsigned_commits_description(push_rule)
+= form.gitlab_ui_checkbox_component :reject_unsigned_commits,
+    "Reject unsigned commits",
+    checkbox_options: { data: { qa_selector: 'reject_unsigned_commits_checkbox' }, disabled: !can_change_push_rule?(form.object, :reject_unsigned_commits, context) },
+    help_text: reject_unsigned_commits_description(push_rule)
