--- a/ee/app/views/groups/hooks/_subgroup_events.html.haml
+++ b/ee/app/views/groups/hooks/_subgroup_events.html.haml
@@ -1,6 +1,3 @@
 %li
-  = form.check_box :subgroup_events, class: 'form-check-input'
-  = form.label :subgroup_events, class: 'list-label form-check-label gl-ml-1' do
-    %strong= s_('Webhooks|Subgroup events')
-  %p.text-muted.gl-ml-1
-    = s_('Webhooks|A subgroup is created or removed.')
+  = form.gitlab_ui_checkbox_component :subgroup_events, s_('Webhooks|Subgroup events'),
+      help_text: s_('Webhooks|A subgroup is created or removed.')
