--- a/ee/app/views/groups/hooks/edit.html.haml
+++ b/ee/app/views/groups/hooks/edit.html.haml
@@ -8,7 +8,7 @@
     = render 'shared/web_hooks/title_and_docs', hook: @hook
 
   .col-lg-9.gl-mb-3
-    = form_for [@group, @hook], as: :hook, url: group_hook_path(@group, @hook) do |f|
+    = gitlab_ui_form_for [@group, @hook], as: :hook, url: group_hook_path(@group, @hook) do |f|
       = render partial: 'shared/web_hooks/form', locals: { form: f, hook: @hook }
 
       %span>= f.submit _('Save changes'), class: 'gl-button btn btn-confirm gl-mr-3'
