--- a/ee/app/views/groups/hooks/index.html.haml
+++ b/ee/app/views/groups/hooks/index.html.haml
@@ -6,7 +6,7 @@
       = render 'shared/web_hooks/title_and_docs', hook: @hook
 
     .col-lg-9.gl-mb-3
-      = form_for @hook, as: :hook, url: polymorphic_path([@group, :hooks]) do |f|
+      = gitlab_ui_form_for @hook, as: :hook, url: polymorphic_path([@group, :hooks]) do |f|
         = render partial: 'shared/web_hooks/form', locals: { form: f, hook: @hook }
         = f.submit _('Add webhook'), class: 'gl-button btn btn-confirm'
 
