Replace generic checkbox with GitLab UI element
Update generic checkboxes on the /admin/settings page,
Visibility and access controls section.

Changelog: changed

--- a/ee/app/views/admin/application_settings/_default_delayed_project_deletion_setting.html.haml
+++ b/ee/app/views/admin/application_settings/_default_delayed_project_deletion_setting.html.haml
@@ -4,8 +4,4 @@
 
 .form-group
   = f.label _('Default delayed project deletion'), class: 'label-bold'
-  .form-check
-    = f.check_box :delayed_project_deletion, class: 'form-check-input'
-    = f.label :delayed_project_deletion, class: 'form-check-label' do
-      = _('Enable delayed project deletion by default for newly-created groups.')
-      = _('Does not apply to projects in personal namespaces, which are deleted immediately on request.')
+  = f.gitlab_ui_checkbox_component :delayed_project_deletion, _('Enable delayed project deletion by default for newly-created groups. Does not apply to projects in personal namespaces, which are deleted immediately on request.')
