--- a/app/views/admin/application_settings/_visibility_and_access.html.haml
+++ b/app/views/admin/application_settings/_visibility_and_access.html.haml
@@ -40,10 +40,7 @@
     = render_if_exists 'admin/application_settings/ldap_access_setting', form: f
 
     .form-group
-      .form-check
-        = f.check_box :project_export_enabled, class: 'form-check-input'
-        = f.label :project_export_enabled, class: 'form-check-label' do
-          = _('Project export enabled')
+      = f.gitlab_ui_checkbox_component :project_export_enabled, s_('AdminSettings|Project export enabled')
 
     .form-group
       %label.label-bold= _('Enabled Git access protocols')
@@ -65,9 +62,6 @@
 
     .form-group
       %label.label-bold= s_('AdminSettings|Feed token')
-      .form-check
-        = f.check_box :disable_feed_token, class: 'form-check-input'
-        = f.label :disable_feed_token, class: 'form-check-label' do
-          = s_('AdminSettings|Disable feed token')
+      = f.gitlab_ui_checkbox_component :disable_feed_token, s_('AdminSettings|Disable feed token')
 
   = f.submit _('Save changes'), class: "gl-button btn btn-confirm"
