--- a/ee/app/views/admin/application_settings/_default_project_deletion_protection_setting.html.haml
+++ b/ee/app/views/admin/application_settings/_default_project_deletion_protection_setting.html.haml
@@ -4,7 +4,4 @@
 
 .form-group
   = f.label _('Default project deletion protection'), class: 'label-bold'
-  .form-check
-    = f.check_box :default_project_deletion_protection, class: 'form-check-input'
-    = f.label :default_project_deletion_protection, class: 'form-check-label' do
-      = _('Only admins can delete project')
+  = f.gitlab_ui_checkbox_component :default_project_deletion_protection, _('Only admins can delete project')
