Migrate confidential message to use PJ style class
Update the confidential warning message
in the "Create confidential merge request"
dropdown to use PJ compliant style classes.

--- a/app/views/projects/issues/_new_branch.html.haml
+++ b/app/views/projects/issues/_new_branch.html.haml
@@ -62,5 +62,5 @@
                 = create_mr_text
 
             - if can_create_confidential_merge_request?
-              %p.text-warning.js-exposed-info-warning.hidden
+              %p.gl-text-orange-500.js-exposed-info-warning.gl-display-none
                 = _('This may expose confidential information as the selected fork is in another namespace that can have other members.')
