--- a/app/views/shared/issuable/form/_metadata.html.haml
+++ b/app/views/shared/issuable/form/_metadata.html.haml
@@ -18,9 +18,8 @@
   .form-group.row
     .offset-sm-2.col-sm-10
       .form-check
-        = form.check_box :confidential, class: 'form-check-input'
-        = form.label :confidential, class: 'form-check-label' do
-          #{_('This issue is confidential and should only be visible to team members with at least Reporter access.')}
+        = form.gitlab_ui_checkbox_component :confidential,
+        s_('This issue is confidential and should only be visible to team members with at least Reporter access.')
 
 - if can?(current_user, :"set_#{issuable.to_ability_name}_metadata", issuable)
   %hr
