--- a/app/views/projects/pipeline_schedules/index.html.haml
+++ b/app/views/projects/pipeline_schedules/index.html.haml
@@ -1,4 +1,4 @@
-= render_if_exists 'shared/minute_limit_banner', project: @project
+= render_if_exists 'shared/minute_limit_banner', namespace: @project
 
 - breadcrumb_title _("Schedules")
 - page_title _("Pipeline Schedules")
