--- a/app/views/projects/pipelines/index.html.haml
+++ b/app/views/projects/pipelines/index.html.haml
@@ -1,4 +1,4 @@
-= render_if_exists 'shared/minute_limit_banner', project: @project
+= render_if_exists 'shared/minute_limit_banner', namespace: @project
 
 - page_title _('Pipelines')
 - add_page_specific_style 'page_bundles/pipelines'
