--- a/app/views/projects/settings/ci_cd/show.html.haml
+++ b/app/views/projects/settings/ci_cd/show.html.haml
@@ -1,4 +1,4 @@
-= render_if_exists 'shared/minute_limit_banner', project: @project
+= render_if_exists 'shared/minute_limit_banner', namespace: @project
 
 - @content_class = "limit-container-width" unless fluid_layout
 - page_title _("CI/CD Settings")
