Update merge request settings checkboxes
- move them to pajamas

Changelog: other

EE: true

--- a/app/views/projects/_merge_request_merge_checks_settings.html.haml
+++ b/app/views/projects/_merge_request_merge_checks_settings.html.haml
@@ -3,21 +3,16 @@
 .form-group
   %b= s_('ProjectSettings|Merge checks')
   %p.text-secondary= s_('ProjectSettings|These checks must pass before merge requests can be merged.')
-  .form-check.mb-2.builds-feature
-    = form.check_box :only_allow_merge_if_pipeline_succeeds, class: 'form-check-input'
-    = form.label :only_allow_merge_if_pipeline_succeeds, class: 'form-check-label' do
-      = s_('ProjectSettings|Pipelines must succeed')
-      .text-secondary
-        = s_("ProjectSettings|Merge requests can't be merged if the latest pipeline did not succeed or is still running.")
-  .form-check.mb-2
-    .gl-pl-6
-      = form.check_box :allow_merge_on_skipped_pipeline, class: 'form-check-input'
-      = form.label :allow_merge_on_skipped_pipeline, class: 'form-check-label' do
-        = s_('ProjectSettings|Skipped pipelines are considered successful')
-        .text-secondary
-          = s_('ProjectSettings|Introduces the risk of merging changes that do not pass the pipeline.')
-  .form-check.mb-2
-    = form.check_box :only_allow_merge_if_all_discussions_are_resolved, class: 'form-check-input', data: { qa_selector: 'allow_merge_if_all_discussions_are_resolved_checkbox' }
-    = form.label :only_allow_merge_if_all_discussions_are_resolved, class: 'form-check-label' do
-      = s_('ProjectSettings|All discussions must be resolved')
+  .builds-feature
+    = form.gitlab_ui_checkbox_component :only_allow_merge_if_pipeline_succeeds,
+      s_('ProjectSettings|Pipelines must succeed'),
+      help_text: s_("ProjectSettings|Merge requests can't be merged if the latest pipeline did not succeed or is still running.")
+  .gl-pl-6
+    = form.gitlab_ui_checkbox_component :allow_merge_on_skipped_pipeline,
+      s_('ProjectSettings|Skipped pipelines are considered successful'),
+      help_text: s_('ProjectSettings|Introduces the risk of merging changes that do not pass the pipeline.'),
+      checkbox_options: { class: 'gl-pl-6' }
+  = form.gitlab_ui_checkbox_component :only_allow_merge_if_all_discussions_are_resolved,
+    s_('ProjectSettings|All discussions must be resolved'),
+    checkbox_options: { data: { qa_selector: 'allow_merge_if_all_discussions_are_resolved_checkbox' } }
   = render_if_exists 'projects/merge_request_merge_checks_jira_enforcement', form: form, project: @project
