--- a/app/views/projects/_merge_request_merge_options_settings.html.haml
+++ b/app/views/projects/_merge_request_merge_options_settings.html.haml
@@ -5,17 +5,10 @@
   %p.text-secondary= s_('ProjectSettings|Additional settings that influence how and when merges are done.')
   = render_if_exists 'projects/merge_pipelines_settings', form: form
   = render_if_exists 'projects/merge_trains_settings', form: form
-  .form-check.mb-2
-    = form.check_box :resolve_outdated_diff_discussions, class: 'form-check-input'
-    = form.label :resolve_outdated_diff_discussions, class: 'form-check-label' do
-      = s_('ProjectSettings|Automatically resolve merge request diff discussions when they become outdated')
-  .form-check.mb-2
-    = form.check_box :printing_merge_request_link_enabled, class: 'form-check-input'
-    = form.label :printing_merge_request_link_enabled, class: 'form-check-label' do
-      = s_('ProjectSettings|Show link to create or view a merge request when pushing from the command line')
-  .form-check.mb-2
-    = form.check_box :remove_source_branch_after_merge, class: 'form-check-input'
-    = form.label :remove_source_branch_after_merge, class: 'form-check-label' do
-      = s_('ProjectSettings|Enable "Delete source branch" option by default')
-      .descr.text-secondary
-        = s_('ProjectSettings|Existing merge requests and protected branches are not affected.')
+  = form.gitlab_ui_checkbox_component :resolve_outdated_diff_discussions,
+    s_('ProjectSettings|Automatically resolve merge request diff discussions when they become outdated')
+  = form.gitlab_ui_checkbox_component :printing_merge_request_link_enabled,
+    s_('ProjectSettings|Show link to create or view a merge request when pushing from the command line')
+  = form.gitlab_ui_checkbox_component :remove_source_branch_after_merge,
+    s_('ProjectSettings|Enable "Delete source branch" option by default'),
+    help_text: s_('ProjectSettings|Existing merge requests and protected branches are not affected.')
