--- a/app/views/admin/groups/_form.html.haml
+++ b/app/views/admin/groups/_form.html.haml
@@ -18,7 +18,7 @@
 
   .form-group.row
     .offset-sm-2.col-sm-10
-      = render 'shared/allow_request_access', form: f, bold_label: true
+      = render 'shared/allow_request_access', form: f
 
   = render 'groups/group_admin_settings', f: f
 
