--- a/ee/app/views/admin/application_settings/_pseudonymizer.html.haml
+++ b/ee/app/views/admin/application_settings/_pseudonymizer.html.haml
@@ -1,18 +1,10 @@
-= form_for @application_setting, url: metrics_and_profiling_admin_application_settings_path(anchor: 'js-pseudonymizer-settings'), html: { class: 'fieldset-form' } do |f|
+= gitlab_ui_form_for @application_setting, url: metrics_and_profiling_admin_application_settings_path(anchor: 'js-pseudonymizer-settings'), html: { class: 'fieldset-form' } do |f|
   = form_errors(@application_setting)
 
   %fieldset
-    .form-group.row
-      .offset-sm-2.col-sm-10
-        - is_enabled = @application_setting.pseudonymizer_enabled?
-        .form-check
-          = f.label :pseudonymizer_enabled do
-            = f.check_box :pseudonymizer_enabled
-            = pseudonymizer_enabled_help_text
-          .form-text.text-muted
-            - if is_enabled
-              = pseudonymizer_description_text
-            - else
-              = pseudonymizer_disabled_description_text
+    .form-group
+      - is_enabled = @application_setting.pseudonymizer_enabled?
+      = f.gitlab_ui_checkbox_component :pseudonymizer_enabled, pseudonymizer_enabled_help_text,
+        help_text: is_enabled ? pseudonymizer_description_text : pseudonymizer_disabled_description_text
 
   = f.submit _('Save changes'), class: "gl-button btn btn-confirm"
