--- a/app/views/groups/group_members/index.html.haml
+++ b/app/views/groups/group_members/index.html.haml
@@ -27,5 +27,7 @@
     .js-group-members-list-app{ data: { members_data: group_members_app_data(@group,
                                                                              members: @members,
                                                                              invited: @invited_members,
-                                                                             access_requests: @requesters).to_json } }
+                                                                             access_requests: @requesters,
+                                                                             include_relations: @include_relations,
+                                                                             search: params[:search_groups]).to_json } }
       = gl_loading_icon(css_class: 'gl-my-5', size: 'md')
