Add additional tracking for billings page

--- a/ee/app/views/subscriptions/new.html.haml
+++ b/ee/app/views/subscriptions/new.html.haml
@@ -4,4 +4,9 @@
   = render "layouts/one_trust"
 = render "layouts/google_tag_manager_body"
 
+- Gitlab::Tracking.event(body_data_page, 'render',
+                         label: 'saas_checkout',
+                         user: current_user,
+                         namespace: @namespace)
+
 #js-new-subscription{ data: subscription_data(@eligible_groups) }
