--- a/ee/app/views/shared/_thanks_for_purchase_banner.html.haml
+++ b/ee/app/views/shared/_thanks_for_purchase_banner.html.haml
@@ -1,3 +1,8 @@
+- Gitlab::Tracking.event(body_data_page, 'render',
+                         label: 'purchase_confirmation_banner_displayed',
+                         user: current_user,
+                         namespace: @group)
+
 %section.gl-banner.gl-banner-introduction{ data: { uid: 'purchase_success_banner_dismissed' } }
   .gl-banner-illustration
     = image_tag('illustrations/illustration-congratulation-purchase.svg', alt: _('Successful purchase image'))
